# emex_parser

./: EMEX Каталог ТО.xlsx  README.md  main.py  pyproject.toml
